--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<div>it works</div>
+<HEAD>
+    <LINK href="Styles/Css/index.css" rel="stylesheet" type="text/css">
+</HEAD>
+
+<div class="whole">
+
+
+
+
+    <div class="side__bar">
+        <div class="side__bar__column">Title-1</div>
+        <div class="side__bar__column">title</div>
+        <div class="side__bar__column">title</div>
+        <div class="side__bar__column">title</div>
+    </div>
+
+</div>
+
+<div class="content">
+
+    <div class="header">
+        <div class="header__column">Title-1</div>
+        <div class="header__column">title</div>
+        <div class="header__column">title</div>
+        <div class="header__column">title</div>
+    </div>
+
+
+    <div class="body">
+        <div class="body__column">Title-1</div>
+        <div class="body__column">title</div>
+        <div class="body__column">title</div>
+        <div class="body__column">title</div>
+    </div>
+
+
+
+
+
+
+    <div class="footer">
+        <div class="footer__column">Title-1</div>
+        <div class="footer__column">title</div>
+        <div class="footer__column">title</div>
+        <div class="footer__column">title</div>
+    </div>
+
+
+</div>
+
+
+</div>
