--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
+<!DOCTYPE html>
+<html>
 <HEAD>
-    <LINK href="Styles/Css/index.css" rel="stylesheet" type="text/css">
+        <title>Page Title</title>
+        <LINK href="Styles/Css/index.css" rel="stylesheet" type="text/css">
 </HEAD>
 
-<div class="whole">
-
-
-
-
+<body class=>
+<div class="main_page">
+    <!-- side bar for navigation -->
     <div class="side__bar">
-        <div class="side__bar__column">Title-1</div>
-        <div class="side__bar__column">title</div>
-        <div class="side__bar__column">title</div>
-        <div class="side__bar__column">title</div>
+        <div class="side__bar__column">description-1</div>
+        <div class="side__bar__column">description-2</div>
+        <div class="side__bar__column">description-2</div>
     </div>
 
+    <!-- Content for main page -->
+    <div class="content">
+        <!-- header for content -->
+        <div class="header">
+            <div class="header__column"><a class="header__link" href="../Trading_Services_Repository/pages/home.html">Home</a></div>
+            <div class="header__column">Services</div>
+            <div class="header__column">Project</div>
+            <div class="header__column">About me</div>
+            <div class="header__column">Contact me</div>
+        </div>
+
+    </div>
 </div>
-
-<div class="content">
-
-    <div class="header">
-        <div class="header__column">Title-1</div>
-        <div class="header__column">title</div>
-        <div class="header__column">title</div>
-        <div class="header__column">title</div>
-    </div>
-
-
-    <div class="body">
-        <div class="body__column">Title-1</div>
-        <div class="body__column">title</div>
-        <div class="body__column">title</div>
-        <div class="body__column">title</div>
-    </div>
-
-
-
-
-
 
     <div class="footer">
-        <div class="footer__column">Title-1</div>
-        <div class="footer__column">title</div>
-        <div class="footer__column">title</div>
-        <div class="footer__column">title</div>
+            <div class="footer__column">Our Services</div>
+            <div class="footer__column">Useful links</div>
+            <div class="footer__column">Support/Questions</div>
+            <div class="footer__column">Customer Services</div>
+            <div class="footer__column">Find/Contact Me</div>
     </div>
 
-
-</div>
-
-
-</div>
+</body>
+</html>
