added bootstrap and Material icons

--- a/index.html
+++ b/index.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <HEAD>
-        <title>Page Title</title>
-        <LINK href="Styles/Css/index.css" rel="stylesheet" type="text/css">
+    <title>Page Title</title>
+    <LINK href="Styles/Css/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </HEAD>
 
 <body class=>
-<div class="main_page">
-    <!-- side bar for navigation -->
-    <div class="side__bar">
-        <div class="side__bar__column">description-1</div>
-        <div class="side__bar__column">description-2</div>
-        <div class="side__bar__column">description-2</div>
-    </div>
-
-    <!-- Content for main page -->
-    <div class="content">
-        <!-- header for content -->
-        <div class="header">
-            <div class="header__column"><a class="header__link" href="../Trading_Services_Repository/pages/home.html">Home</a></div>
-            <div class="header__column">Services</div>
-            <div class="header__column">Project</div>
-            <div class="header__column">About me</div>
-            <div class="header__column">Contact me</div>
+    <div class="main_page">
+        <!-- side bar for navigation -->
+        <div class="side__bar">
+            <div class="side__bar__column">description-1</div>
+            <div class="side__bar__column">description-2</div>
+            <div class="side__bar__column">description-2</div>
         </div>
 
+        <!-- Content for main page -->
+        <div class="content">
+
+            <!-- header for content -->
+            <div class="header">
+                <div class="header__column"><a class="header__link"
+                        href="../Trading_Services_Repository/pages/home.html">Home</a></div>
+                <div class="header__column">Services</div>
+                <div class="header__column">Project</div>
+                <div class="header__column">About me</div>
+                <div class="header__column">Contact me</div>
+            </div>
+
+        </div>
     </div>
-</div>
 
     <div class="footer">
-            <div class="footer__column">Our Services</div>
-            <div class="footer__column">Useful links</div>
-            <div class="footer__column">Support/Questions</div>
-            <div class="footer__column">Customer Services</div>
-            <div class="footer__column">Find/Contact Me</div>
+        <div class="footer__column">Our Services</div>
+        <div class="footer__column">Useful links</div>
+        <div class="footer__column">Support/Questions</div>
+        <div class="footer__column">Customer Services</div>
+        <div class="footer__column">Find/Contact Me</div>
     </div>
 
+
+
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous">
+    </script>
+
 </body>
+
 </html>
